[package]
name = "networkless"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
fs2 = "0.4.3"
futures = "0.3.31"
gtk = "0.18.2"
image = { version = "0.25.6", features = ["png"] }
log = "0.4.27"
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
simplelog = "0.12.2"
tokio = { version = "1.45.0", features = ["rt", "macros", "sync", "time"] }
tray-icon = "0.20.1"
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
