[package]
name = "networkless-rs"
version = "0.5.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
fs2 = "0.4.3"
futures = "0.3.31"
image = { version = "0.25.6", default-features = false, features = ["png"] }
ksni = "0.3.1"
log = "0.4.27"
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
simplelog = "0.12.2"
tokio = { version = "1.45.0", features = ["rt", "macros", "sync", "time"] }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
